--- a/network_libevent.vcxproj.filters
+++ b/network_libevent.vcxproj.filters
@@ -73,9 +73,6 @@
     <ClInclude Include="Logger.h">
       <Filter>common</Filter>
     </ClInclude>
-    <ClInclude Include="DefineInclude.h">
-      <Filter>common</Filter>
-    </ClInclude>
     <ClInclude Include="singleton.h">
       <Filter>common</Filter>
     </ClInclude>
@@ -89,6 +86,15 @@
       <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="ThreadHandle.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="lock.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="Define.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="Include.h">
       <Filter>common</Filter>
     </ClInclude>
   </ItemGroup>
